oprava chyb v autentikacii

--- a/src/main/webapp/shop/i18n/cz.txt
+++ b/src/main/webapp/shop/i18n/cz.txt
@@ -71,6 +71,8 @@
 	"auth.signin.emailSent": "Na Vámi uvedenou adresu byl zaslán email s jednorázovým přihlašovacím kódem (PIN). V následujícím formuláři vyplňte tento kód.",
 	"auth.signin.userNotExist": "Uživatel s Vámi zadanou email adresou neexistuje. Jste-li nový uživatel, prosíme zaregistrujte se kliknutím na link \"Registrace\"",
 	"auth.signin.success.message": "Přihlášení proběhlo úspěšne!",
+	"auth.signin.alreadySignedIn.message": "Jste již přihlášenej uživatel!",
+
 	"auth.pin.submit": "Přihlásit",
 
 	"profile.edit.user.anonymous.message": "Nejste přihlášen. Informace o profilu není k dispozici.",
