--- a/src/main/webapp/shop/i18n/en.txt
+++ b/src/main/webapp/shop/i18n/en.txt
@@ -71,6 +71,7 @@
 	"auth.signin.emailSent": "An email was sent to your email address containing single-use code (PIN). Please provide this code in the following dialog.",
 	"auth.signin.userNotExist": "User with given email addess already exists. If you are a new user, please register using link \"Register\"",
 	"auth.signin.success.message": "Sign In successful!",
+	"auth.signin.alreadySignedIn.message": "You are already signed in!",
 	"auth.pin.submit": "Sign In",
 
 	"profile.edit.user.anonymous.message": "Not logged in. No profile information available.",
